--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: python
 
 python:
- - "3.6"
+ - "3.5.2"
 
     
 install:    
 - pip install -r requirements.txt
-- pip install coveralls codecov pytest-cov
-- pip install codeclimate-test-reporter
+- pip install pytest-cov
+- pip install coveralls
 
 script:    
-- pytest --cov-report term-missing --cov=app
+- pytest --cov=app/api/v2
 - coveralls
 after_success:
 - coveralls
-- codeclimate-test-reporter
