--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ coveralls==1.6.0
 docopt==0.6.2
 Flask==1.0.2
 Flask-RESTful==0.3.7
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.8
 itsdangerous==1.1.0
