--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 aniso8601==4.1.0
+asn1crypto==0.24.0
 astroid==2.1.0
 atomicwrites==1.3.0
 attrs==18.2.0
 certifi==2018.11.29
+cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+configparser==3.7.3
 coverage==4.5.2
 coveralls==1.6.0
+cryptography==2.5
 docopt==0.6.2
 Flask==1.0.2
 Flask-RESTful==0.3.7
@@ -21,8 +25,12 @@ mccabe==0.6.1
 more-itertools==6.0.0
 pathlib2==2.3.3
 pluggy==0.9.0
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
 py==1.8.0
+pycparser==2.19
 pylint==2.2.2
+pyOpenSSL==19.0.0
 pytest==4.3.0
 python-dotenv==0.10.1
 pytz==2018.9
